--- a/index.html
+++ b/index.html
@@ -5,14 +5,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/styles.css">
+   <link rel="stylesheet" href="./css/styles.css">
 
 </head>
 
 <body>
-<script src="js/main.js"> </script>
 
 
+    <h1>
+        Planta de Reciclaje
+    </h1>
+
+
+   <div id="metales">
+
+   </div>
+
+
+   <div id="totales">
+
+   </div>
+
+    
+
+
+
+
+
+
+
+
+
+
+
+
+    <script src="js/main.js"> </script>
 </body>
 
 </html>
